Examples After Workshop

--- a/src/test/resources/archunit.properties
+++ b/src/test/resources/archunit.properties
@@ -2,10 +2,10 @@
 #Freezing Konfigurationen
 
 # store location
-#freeze.store.default.path=src/test/resources/frozen
+freeze.store.default.path=src/test/resources/frozen
 
 # allow creation of a new violation store (default: false)
-#freeze.store.default.allowStoreCreation=true
+freeze.store.default.allowStoreCreation=true
 
 
 
